Nearly ready for v1.0.

--- a/MvvmTools.Core/Converters/Converters.xaml
+++ b/MvvmTools.Core/Converters/Converters.xaml
@@ -13,5 +13,6 @@
     <local:BoolInvertedConverter x:Key="BoolInvertedConverter" />
     <local:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
     <local:ProjectDisplayNameConverter x:Key="ProjectDisplayNameConverter" />
+    <local:ZeroToCollapsedConverter x:Key="ZeroToCollapsedConverter" />
 
 </ResourceDictionary>
