--- a/MvvmTools.Core/Views/OptionsTemplateMaintenanceUserControl.xaml
+++ b/MvvmTools.Core/Views/OptionsTemplateMaintenanceUserControl.xaml
@@ -31,188 +31,7 @@
         <views:HeaderUserControl />
 
         <GroupBox Grid.Row="1" Header="MVVM Templates  (View + Code Behind + View Model)">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-
-                <!--  Filters  -->
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-
-                    <ComboBox Margin="0,0,3,0"
-                              DisplayMemberPath="Description"
-                              Focusable="False"
-                              ItemsSource="{Binding Platforms}"
-                              SelectedValue="{Binding SelectedPlatform}"
-                              SelectedValuePath="Value" />
-
-                    <ComboBox Grid.Column="1"
-                              Margin="3,0"
-                              DisplayMemberPath="Description"
-                              Focusable="False"
-                              ItemsSource="{Binding FormFactors}"
-                              SelectedValue="{Binding SelectedFormFactor}"
-                              SelectedValuePath="Value" />
-
-                    <ComboBox Grid.Column="2"
-                              Margin="3,0,0,0"
-                              DisplayMemberPath="Description"
-                              Focusable="False"
-                              ItemsSource="{Binding Frameworks}"
-                              SelectedValue="{Binding SelectedFramework}"
-                              SelectedValuePath="Value" />
-                </Grid>
-
-                <!--  Search Box  -->
-                <controls:TextBoxEx x:Name="SearchBox"
-                                    Grid.Row="1"
-                                    Grid.Column="0"
-                                    Margin="0,5,0,0"
-                                    ShowClearButton="True"
-                                    Text="{Binding SearchText,
-                                                   Mode=TwoWay,
-                                                   UpdateSourceTrigger=PropertyChanged,
-                                                   Delay=500}"
-                                    Watermark="Search..." />
-
-                <!--  Templates DataGrid  -->
-                <DataGrid x:Name="TemplatesDataGrid"
-                          Grid.Row="2"
-                          Grid.Column="0"
-                          Margin="0,5,0,0"
-                          AutoGenerateColumns="False"
-                          CanUserAddRows="False"
-                          CanUserDeleteRows="False"
-                          CanUserReorderColumns="False"
-                          CanUserResizeColumns="False"
-                          CanUserResizeRows="False"
-                          CanUserSortColumns="False"
-                          CellStyle="{StaticResource NoFocusDataGridCell}"
-                          GridLinesVisibility="None"
-                          HeadersVisibility="None"
-                          ItemsSource="{Binding Templates}"
-                          Loaded="TemplatesDataGrid_OnLoaded"
-                          SelectionUnit="FullRow">
-                    <DataGrid.Columns>
-                        <DataGridTemplateColumn Width="*" Header="Name">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate DataType="viewModels:TemplateDialogViewModel">
-                                    <Grid MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition Height="Auto" />
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition />
-                                            <ColumnDefinition />
-                                            <ColumnDefinition />
-                                        </Grid.ColumnDefinitions>
-
-                                        <!--  Name  -->
-                                        <TextBlock Grid.Row="0"
-                                                   Grid.ColumnSpan="3"
-                                                   FontWeight="Bold"
-                                                   Padding="3,1"
-                                                   Text="{Binding Name,
-                                                                  Mode=OneWay}"
-                                                   TextWrapping="WrapWithOverflow" />
-
-                                        <!--  Platforms  -->
-                                        <TextBlock Grid.Row="1"
-                                                   Grid.Column="0"
-                                                   FontSize="10"
-                                                   Padding="3,1"
-                                                   Text="{Binding Platforms.CheckedItemsCommaSeparated,
-                                                                  Mode=OneWay}"
-                                                   TextWrapping="WrapWithOverflow" />
-
-                                        <!--  Form Factors  -->
-                                        <TextBlock Grid.Row="1"
-                                                   Grid.Column="1"
-                                                   FontSize="10"
-                                                   Padding="3,1"
-                                                   Text="{Binding FormFactors.CheckedItemsCommaSeparated,
-                                                                  Mode=OneWay}"
-                                                   TextWrapping="WrapWithOverflow" />
-
-                                        <!--  Framework  -->
-                                        <TextBlock Grid.Row="1"
-                                                   Grid.Column="2"
-                                                   FontSize="10"
-                                                   Padding="3,1"
-                                                   Text="{Binding Framework,
-                                                                  Mode=OneWay}"
-                                                   TextWrapping="WrapWithOverflow" />
-                                    </Grid>
-
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-                    </DataGrid.Columns>
-                </DataGrid>
-
-                <!--  Add/Edit/Delete/Copy Buttons  -->
-                <StackPanel Grid.Row="2"
-                            Grid.Column="1"
-                            Margin="5,5,0,0">
-                    <Button Command="{Binding AddTemplateCommand}"
-                            Content="Add"
-                            Focusable="False"
-                            Padding="8,2" />
-                    <Button Margin="0,5,0,0"
-                            Command="{Binding EditTemplateCommand}"
-                            Content="{Binding TemplateEditButtonContent}"
-                            Focusable="False"
-                            Padding="8,2" />
-                    <Button Margin="0,5,0,0"
-                            Command="{Binding DeleteTemplateCommand}"
-                            Content="Delete"
-                            Focusable="False"
-                            Padding="8,2" />
-                    <Button Margin="0,15,0,0"
-                            Command="{Binding CopyTemplateCommand}"
-                            Content="Copy"
-                            Focusable="False"
-                            Padding="8,2" />
-                </StackPanel>
-
-                <!--  Refresh Button  -->
-                <Button Grid.Row="2"
-                        Grid.Column="1"
-                        Margin="5,0,0,0"
-                        VerticalAlignment="Bottom"
-                        Command="{Binding RefreshTemplatesCommand}"
-                        Content="Refresh"
-                        Focusable="False"
-                        Padding="8,2" />
-
-                <!--  Template Description  -->
-                <TextBox Grid.Row="3"
-                         Grid.Column="0"
-                         Grid.ColumnSpan="2"
-                         Height="70"
-                         Margin="0,5,0,0"
-                         Background="Transparent"
-                         BorderThickness="0"
-                         HorizontalScrollBarVisibility="Disabled"
-                         IsReadOnly="True"
-                         Padding="0"
-                         Text="{Binding Templates.CurrentItem.Description}"
-                         TextWrapping="WrapWithOverflow"
-                         VerticalScrollBarVisibility="Auto" />
-            </Grid>
+            <views:TemplateBrowseUserControl DataContext="{Binding TemplateBrowseUserControlViewModel}" />
         </GroupBox>
     </Grid>
 </UserControl>
