--- a/MvvmTools.Core/Views/DialogWindow.xaml
+++ b/MvvmTools.Core/Views/DialogWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:MvvmTools.Core.ViewModels"
         Title="{Binding Title}"
+        Background="#D8D8D8"
         KeyUp="DialogWindow_OnKeyUp"
         Loaded="DialogWindow_OnLoaded"
         ResizeMode="CanResizeWithGrip"
