--- a/MvvmTools.Core/Views/FieldValuesUserControl.xaml
+++ b/MvvmTools.Core/Views/FieldValuesUserControl.xaml
@@ -20,85 +20,96 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <ItemsControl ItemsSource="{Binding Fields}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate DataType="viewModels:FieldValueUserControlViewModel">
-                    <Grid>
-                        <Separator VerticalAlignment="Top" />
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
 
-                        <Grid Margin="0,3,0,0" Background="#ECECEC">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" SharedSizeGroup="A" />
-                                <ColumnDefinition SharedSizeGroup="B" />
-                                <ColumnDefinition SharedSizeGroup="C" />
-                            </Grid.ColumnDefinitions>
+        <TextBlock Margin="0,0,0,5"
+                   FontWeight="SemiBold"
+                   Text="Please enter the following field values." />
 
-                            <!--  Prompt  -->
-                            <TextBlock Grid.Column="0"
-                                       Margin="5,8,5,5"
-                                       HorizontalAlignment="Right"
-                                       VerticalAlignment="Top"
-                                       Text="{Binding PromptWithColon}" />
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+            <ItemsControl ItemsSource="{Binding Fields}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="viewModels:FieldValueUserControlViewModel">
+                        <Grid>
+                            <!--<Separator VerticalAlignment="Top" />-->
 
-                            <!--  TextBox  -->
-                            <controls:TextBoxEx Grid.Row="0"
-                                                Grid.Column="1"
-                                                Margin="0,7,0,5"
-                                                VerticalAlignment="Top"
-                                                AcceptsReturn="{Binding ShowTextBoxMultiline}"
-                                                Text="{Binding DefaultString,
-                                                               UpdateSourceTrigger=PropertyChanged,
-                                                               ValidatesOnDataErrors=True,
-                                                               NotifyOnValidationError=True}"
-                                                VerticalScrollBarVisibility="Auto"
-                                                Visibility="{Binding ShowTextBox,
-                                                                     Converter={StaticResource BoolToVisibilityConverter}}" />
+                            <Grid Margin="0,2,0,0" Background="#ECECEC">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" SharedSizeGroup="A" />
+                                    <ColumnDefinition SharedSizeGroup="B" />
+                                    <ColumnDefinition SharedSizeGroup="C" />
+                                </Grid.ColumnDefinitions>
 
-                            <!--  CheckBox  -->
-                            <CheckBox Grid.Row="0"
-                                      Grid.Column="1"
-                                      Margin="0,9,0,5"
-                                      VerticalAlignment="Top"
-                                      IsChecked="{Binding DefaultBoolean}"
-                                      Visibility="{Binding ShowDefaultCheckBox,
-                                                           Converter={StaticResource BoolToVisibilityConverter}}" />
+                                <!--  Prompt  -->
+                                <TextBlock Grid.Column="0"
+                                           Margin="5,8,5,5"
+                                           HorizontalAlignment="Right"
+                                           VerticalAlignment="Top"
+                                           Text="{Binding PromptWithColon}" />
 
-                            <!--  ComboBox  -->
-                            <ComboBox Grid.Row="0"
-                                      Grid.Column="1"
-                                      Margin="0,5,0,5"
-                                      VerticalAlignment="Top"
-                                      IsEditable="{Binding ShowComboBoxOpen}"
-                                      ItemsSource="{Binding ChoicesAsString}"
-                                      Text="{Binding DefaultString}"
-                                      Visibility="{Binding ShowComboBox,
-                                                           Converter={StaticResource BoolToVisibilityConverter}}" />
+                                <!--  TextBox  -->
+                                <controls:TextBoxEx Grid.Row="0"
+                                                    Grid.Column="1"
+                                                    Margin="0,7,0,5"
+                                                    VerticalAlignment="Top"
+                                                    AcceptsReturn="{Binding ShowTextBoxMultiline}"
+                                                    Text="{Binding DefaultString,
+                                                                   UpdateSourceTrigger=PropertyChanged,
+                                                                   ValidatesOnDataErrors=True,
+                                                                   NotifyOnValidationError=True}"
+                                                    VerticalScrollBarVisibility="Auto"
+                                                    Visibility="{Binding ShowTextBox,
+                                                                         Converter={StaticResource BoolToVisibilityConverter}}" />
 
-                            <!--  Description  -->
-                            <controls:TextBoxEx Grid.Row="0"
-                                                Grid.Column="2"
-                                                Margin="5,3,0,2"
-                                                VerticalAlignment="Center"
-                                                AcceptsReturn="True"
-                                                Background="Transparent"
-                                                BorderThickness="0"
-                                                IsReadOnly="True"
-                                                Text="{Binding Description,
-                                                               UpdateSourceTrigger=PropertyChanged,
-                                                               ValidatesOnDataErrors=True,
-                                                               NotifyOnValidationError=True}"
-                                                TextWrapping="WrapWithOverflow"
-                                                VerticalScrollBarVisibility="Auto" />
+                                <!--  CheckBox  -->
+                                <CheckBox Grid.Row="0"
+                                          Grid.Column="1"
+                                          Margin="0,9,0,5"
+                                          VerticalAlignment="Top"
+                                          IsChecked="{Binding DefaultBoolean}"
+                                          Visibility="{Binding ShowDefaultCheckBox,
+                                                               Converter={StaticResource BoolToVisibilityConverter}}" />
+
+                                <!--  ComboBox  -->
+                                <ComboBox Grid.Row="0"
+                                          Grid.Column="1"
+                                          Margin="0,5,0,5"
+                                          VerticalAlignment="Top"
+                                          IsEditable="{Binding ShowComboBoxOpen}"
+                                          ItemsSource="{Binding ChoicesAsString}"
+                                          Text="{Binding DefaultString}"
+                                          Visibility="{Binding ShowComboBox,
+                                                               Converter={StaticResource BoolToVisibilityConverter}}" />
+
+                                <!--  Description  -->
+                                <controls:TextBoxEx Grid.Row="0"
+                                                    Grid.Column="2"
+                                                    Margin="5,3,0,2"
+                                                    VerticalAlignment="Center"
+                                                    AcceptsReturn="True"
+                                                    Background="Transparent"
+                                                    BorderThickness="0"
+                                                    IsReadOnly="True"
+                                                    Text="{Binding Description,
+                                                                   UpdateSourceTrigger=PropertyChanged,
+                                                                   ValidatesOnDataErrors=True,
+                                                                   NotifyOnValidationError=True}"
+                                                    TextWrapping="WrapWithOverflow"
+                                                    VerticalScrollBarVisibility="Auto" />
+                            </Grid>
                         </Grid>
-                    </Grid>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-    </ScrollViewer>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </ScrollViewer>
+    </Grid>
 </UserControl>
