--- a/MvvmTools.Core/Views/LocationScaffoldUserControl.xaml
+++ b/MvvmTools.Core/Views/LocationScaffoldUserControl.xaml
@@ -32,14 +32,9 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <TextBlock Margin="0,0,0,0"
-                       VerticalAlignment="Bottom"
-                       Text="Place in Project:" />
+            <TextBlock VerticalAlignment="Bottom" Text="Place in Project:" />
             <ComboBox Grid.Row="1"
                       Margin="0,0,0,5"
                       DisplayMemberPath="ProjectModel.Name"
@@ -63,14 +58,6 @@
                        VerticalAlignment="Bottom"
                        Text="Namespace:" />
             <TextBox Grid.Row="6" Text="{Binding Namespace, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" />
-
-            <CheckBox Grid.Row="8"
-                      Grid.Column="0"
-                      Margin="0,5,0,2"
-                      HorizontalAlignment="Left"
-                      VerticalAlignment="Center"
-                      Content="Append View Suffix"
-                      IsChecked="{Binding AppendViewType}" />
         </Grid>
     </Grid>
 </UserControl>
